# AI-trading-firm

./: .gitignore  README.md  pyproject.toml
agents/debate/: logic.py  server.py
agents/fundamentals/: data.py  logic.py  server.py
agents/fundamentals-java/: pom.xml
agents/sentiment/: logic.py  server.py
common/: a2a_server.py  llm.py  metrics_queries.py  metrics_report.py  telemetry.py
docker/langfuse/: .env.langfuse.example  README.md  dashboard.json  docker-compose.yml
docs/superpowers/plans/: 2026-06-19-trading-agents-a2a-phase1.md  2026-06-21-m3-fundamentals-java-agent.md  2026-06-22-tracing-python-continuation.md  2026-06-22-tracing-scope-b-java-agent.md  2026-06-23-tracing-scope-c-langfuse.md  2026-06-24-metrics-via-langfuse.md  2026-06-30-telemetry-polish.md
docs/superpowers/specs/: 2026-06-19-trading-agents-a2a-design.md  2026-06-20-m3-fundamentals-java-agent-design.md  2026-06-22-tracing-python-continuation-design.md  2026-06-22-tracing-scope-b-java-agent-design.md  2026-06-23-tracing-scope-c-langfuse-design.md  2026-06-24-metrics-via-langfuse-design.md  2026-06-30-telemetry-polish-design.md
orchestrator/: a2a_client.py  graph.py  main.py
scripts/: metrics_report.py  run_all.sh  run_all_java.sh  spike_helloworld.py
tests/: conftest.py  test_a2a_client.py  test_a2a_server.py  test_debate_logic.py  test_fundamentals_logic.py  test_java_interop.py  test_llm.py  test_metrics_report.py  test_orchestrator_integration.py  test_sentiment_logic.py  test_telemetry.py  test_trace_continuation.py  test_trace_propagation.py
(+19 files in other folders)
